# gnome-keysign

./: .gitignore  .gitmodules  AvahiBrowse.py  AvahiPublish.py  GPGQRCode.py  GeysignPages.py  GtkKeyserver.py  Keyserver.py  MANIFEST.in  MainWindow.py  Makefile  QRCode.py  README.md  README.rst  RELEASE_NOTES  Sections.py  SignPages.py  babel.cfg  geysign.sh  gnome-keysign.doap  gnome-keysign.py  key.py  mypaint-Makefile  org.gnome.Keysign.json  pyproject.toml  requirements.txt  scan_barcode.py  setup.cfg  setup.py  testkey.gpg  tox.ini
.github/workflows/: ci.yml
babelglade/: LICENSE  __init__.py
contrib/: gnome-keysign.spec
data/: gks-sign-key.man.rst  gnome-keysign-sign-key.man.rst  gnome-keysign-split-uids.man.rst  gnome-keysign.appdata.xml  gnome-keysign.man.rst  keysign.appdata.xml  org.gnome.Keysign.raw.appdata.xml  org.gnome.Keysign.raw.desktop
flatpak/: README.rst  gpg.json  gpg.yml  keysign-Makefile  magic-wormhole.yml  org.gnome.Keysign.json  org.gnome.Keysign.yml  twisted.json  twisted[tls].yml
keysign/: GPGQRCode.py  GetKeySection.py  GtkKeyserver.py  KeyConfirm_error.py  KeyPresent.py  KeySignSection.py  KeysPage.py  Keyserver.py  MainWindow.py  PreSignWidget_success.py  QRCode.py  Sections.py  SignKey.py  SignPages.py  __init__.py  __main__.py  _version.py  app.py  app.ui  app4.ui  avahidiscovery.py  avahioffer.py  avahiwormholediscover.py  avahiwormholeoffer.py  bluetoothoffer.py  bluetoothreceive.py  bluetoothutil.py  camera_portal.py  dialog_avahi.ui  dialog_avahi4.ui  discover.py  errors.py  export_uids.py  gnome-keysign-sign-key.py  gpgkey.py  gpgmeh.py  gpgmh.py  gpgmks.py  gtkexcepthook.py  i18n.py  (+17 more)
keysign/compat/: gtkbutton.py  monkeysign_expired_keys.py  monkeysign_revoked_keys.py
keysign/locale/: README.rst
keysign/locale/cs/LC_MESSAGES/: keysign.po
keysign/locale/da/LC_MESSAGES/: keysign.po
keysign/locale/de/LC_MESSAGES/: keysign.po
keysign/locale/en_GB/LC_MESSAGES/: keysign.po
keysign/locale/es/LC_MESSAGES/: keysign.po
keysign/locale/eu/LC_MESSAGES/: keysign.po
keysign/locale/fi/LC_MESSAGES/: keysign.po
keysign/locale/fr/LC_MESSAGES/: keysign.po
keysign/locale/fur/LC_MESSAGES/: keysign.po
keysign/locale/hi/LC_MESSAGES/: keysign.po
keysign/locale/hr/LC_MESSAGES/: keysign.po
keysign/locale/hu/LC_MESSAGES/: keysign.po
keysign/locale/id/LC_MESSAGES/: keysign.po
keysign/locale/it/LC_MESSAGES/: keysign.po
keysign/locale/ka/LC_MESSAGES/: keysign.po
keysign/locale/kk/LC_MESSAGES/: keysign.po
keysign/locale/nl/LC_MESSAGES/: keysign.po
keysign/locale/pl/LC_MESSAGES/: keysign.po
keysign/locale/pt_BR/LC_MESSAGES/: keysign.po
keysign/locale/ro/LC_MESSAGES/: keysign.po
keysign/locale/ru/LC_MESSAGES/: keysign.po
keysign/locale/sl/LC_MESSAGES/: keysign.po
keysign/locale/sr/LC_MESSAGES/: keysign.po
keysign/locale/sv/LC_MESSAGES/: keysign.po
keysign/locale/tr/LC_MESSAGES/: keysign.po
keysign/locale/uk/LC_MESSAGES/: keysign.po
keysign/locale/zh_CN/LC_MESSAGES/: keysign.po
keysign/network/: AvahiBrowser.py  AvahiConstants.py  AvahiPublisher.py  __init__.py
monkeysign/: __init__.py  gpg.py
network/: AvahiBrowser.py  AvahiDiscover.py  AvahiPublisher.py
packaging/: PKGBUILD  gnome-keysign.install  gnome-keysign.spec
tests/: create_attestee.sh  create_attestor.sh  test_app.py  test_bluetooth.py  test_camera.py  test_camera_portal.py  test_gpgmeh.py  test_gpgmh.py  test_gpgmks.py  test_latin1.py  test_uids.py  test_wormhole.py
tests/fixtures/: alpha.asc  pubkey-2-uids.asc  pubkey-utf8.asc  seckey-2.asc  seckey-colon.asc  seckey-latin1.asc  seckey-multiple-uid-colon.asc  seckey-no-pw-1.asc  seckey-no-pw-2.asc  seckey-subkeys.asc  seckey-utf8-2.asc  seckey-utf8.asc  third_party.pgp.asc
